# trio-chrome-devtools-protocol

./: pyproject.toml
generator/: generate.py  test_generate.py
