[tool.poetry]
name = "trio-chrome-devtools-protocol"
packages = [{include = "trio_cdp"}]
version = "0.7.0"
description = "Trio driver for Chrome DevTools Protocol (CDP)"
authors = ["Mark E. Haase <mehaase@gmail.com>", "Brian Mackintosh <bcmackintosh@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hyperiongray/python-chrome-devtools-protocol"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.10"
# poetry remove chrome-devtools-protocol && poetry add /home/nik/IdeaProjects/python-chrome-devtools-protocol/dist/chrome_devtools_protocol-0.6.0-py3-none-any.whl
trio = "^0.22.2"
trio_websocket = "^0.11.1"
chrome-devtools-protocol = {path = "/home/nik/IdeaProjects/python-chrome-devtools-protocol/dist/chrome_devtools_protocol-0.6.0-py3-none-any.whl"}

[tool.poetry.dev-dependencies]
mypy = "^1.6.0"
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pytest-trio = "^0.8.0"
sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^1.24.0"
sphinx-rtd-theme = "1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
